<resources>
    <string name="app_name">Manillas</string>
    <string name="titulo">Aplicación Manillas</string>
    <string name="material">Material:</string>
    <string name="dije">Dije:</string>
    <string name="tipo">Tipo:</string>
    <string name="moneda">Moneda:</string>
    <string name="peso">Peso</string>
    <string name="dolares">Dolares</string>
    <string name="cuantasdesea">Cuantas desea:</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="oro">Oro</string>
    <string name="ororosado">Oro Rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string name="comprar">Comprar</string>
    <string name="error_1">Por favor digite Cantidad:</string>
    <string-array name="materiales">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string-array name="dije">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>
    <string-array name="tipo">
        <item>@string/oro</item>
        <item>@string/ororosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>

</resources>
