<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.manillas.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:text="@string/cuantasdesea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="24sp"
                android:textColor="@android:color/holo_green_dark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/Txtvalor" />

            <TextView
                android:text="@string/material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textSize="24sp"
                android:textColor="@android:color/holo_green_dark" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cmbCombo" />

            <TextView
                android:text="@string/dije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="24sp"
                android:textColor="@android:color/holo_green_dark" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cmbCombo2" />

            <TextView
                android:text="@string/tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textSize="24sp"
                android:textColor="@android:color/holo_green_dark" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cmbCombo3" />

            <TextView
                android:text="@string/moneda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textSize="24sp"
                android:textColor="@android:color/holo_green_dark" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="@string/peso"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:id="@+id/r1"
                    android:layout_weight="0.40" />

                <RadioButton
                    android:text="@string/dolares"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r2"
                    android:layout_weight="1" />

            </RadioGroup>

            <Button
                android:text="@string/comprar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cmdBoton"
                android:layout_weight="0.40"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
